Updates from Overleaf

--- a/LC_Avancement.tex
+++ b/LC_Avancement.tex
@@ -22,15 +22,15 @@ Code couleur pour les manips :
   \textbf{Synthèse, traitement, caractérisations} p\pageref{LC_SyntheseTraitement} & Filtration sous vide & Synthèse acide benzoïque  & 1ère générale - spécialité \\
   \hline
   \hline
-  \textbf{Oxydants et réducteurs} & Réaliser une pile & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
+  \textbf{Oxydants et réducteurs} & Réaliser une pile & \textcolor{green}{Pile Daniell}  & Term générale - spécialité \\
   \hline
-  \textbf{Chimie analytique quantitative et fiabilité} & Titrage par conductimétrie & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité  \\
+  \textbf{Chimie analytique quantitative et fiabilité} & Titrage par conductimétrie & \textcolor{green}{Titrage ions Cl dans sérum phy}  & Term générale - spécialité  \\
   \hline
   \textbf{Evolution spontanée d'un système} & Déterminer $Q_{final}$ & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité  \\
   \hline
   \textbf{Cinétique et catalyse} & Mise en évidence d'un effet catalyseur & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité  \\
   \hline
-  \textbf{Stratégies en synthèse organique} & Protocole d'ptimisation d'un rendement/vitesse & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité  \\
+  \textbf{Stratégies en synthèse organique} & Protocole d'optimisation d'un rendement/vitesse & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité  \\
   \hline
   \hline
    \textbf{Structure spatiale des molécules} & Différencier 2 stéréoisomères & \textcolor{red}{\textbf{0\%}}  & 1ère STL  \\
@@ -53,7 +53,7 @@ Code couleur pour les manips :\\
 \textcolor{red}{Manip à faire en priorité}\\
 \end{center}
 
-\begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
+\begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \rowcolor{gray!20}\multicolumn{4}{c}{Avancement préparation oraux Leçons Chimie} \\
   \hline 
@@ -61,7 +61,7 @@ Code couleur pour les manips :\\
   \hline
   \textbf{Synthèse, purification, contrôle pureté liquide organique} & CCM & \textcolor{red}{\textbf{0\%}}  & 1ère SPCL  \\
   \hline
-  \textbf{Réactivité des alcools} & Recristallisation & \textcolor{red}{\textbf{0\%}}  & 1ère SPCL  \\
+  \textbf{Réactivité des alcools} & Recristallisation & \textcolor{green}{Aspirine}  & 1ère SPCL  \\
   \hline
   \textbf{Réactions de synthèse, sites electrophiles, nucléophiles, formalisme flèches courbes} & Montage à reflux & \textcolor{red}{\textbf{0\%}}  & 1ère SPCL \\
   \hline
@@ -76,9 +76,9 @@ Code couleur pour les manips :\\
   \hline
   \textbf{Oxydoréduction} & Titrage dont la réaction support est une oxydo-reduction & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
   \hline
-  \textbf{Réactivité des dérivés d'acide} & Montage Dean-Stark & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
+  \textbf{Réactivité des dérivés d'acide} & Montage Dean-Stark & \textcolor{green}{Synthèse arôme de banane}  & Term générale - spécialité \\
   \hline
-  \textbf{Electrolyse, électrosynthèse} & Réaliser une électrolyse à anode soluble & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
+  \textbf{Electrolyse, électrosynthèse} & Réaliser une électrolyse à anode soluble & \textcolor{red}{Elec à anode soluble}- Florence Porteu-de-Buchère - Dunod p190 & Term générale - spécialité \\
   \hline
 \end{tabularx}
 \end{changemargin}
@@ -86,20 +86,20 @@ Code couleur pour les manips :\\
 \newpage
 \begin{changemargin}{-1.5cm}{-0cm}
     
-\begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
+\begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \rowcolor{gray!20}\multicolumn{4}{c}{Avancement préparation oraux Leçons Chimie} \\
   \hline 
   Titre de la leçon & Elément imposé & Expérience & Niveau \\
   \hline
-   \textbf{Energie chimique - exemple des combustions} & Estimer pouvoir calo d'une combustion & \textcolor{red}{\textbf{0\%}}  & 1ère/terminale STI2D \\
+   \textbf{Energie chimique - exemple des combustions} & Estimer pouvoir calo d'une combustion & \textcolor{green}{Voir Nathan ST2S}  & 1ère/terminale STI2D \\
   \hline
-   \textbf{Distillation et diagrammes binaires} & Distillation & \textcolor{red}{\textbf{0\%}}  & 1ère/terminale STI2D \\
+   \textbf{Distillation et diagrammes binaires} & Distillation & \textcolor{yellow}{}  & 1ère/terminale STI2D \\
    \hline  
    \hline
-  \textbf{Molécules d'intérêt biologique} & Différencier aldéhyde/cétone & \textcolor{red}{0\%} & 1ère ST2S \\
+  \textbf{Molécules d'intérêt biologique} & Différencier aldéhyde/cétone & \textcolor{green}{Voir Nathan ST2S} & 1ère ST2S \\
   \hline
-  \textbf{Gestion des risques au laboratoire de chimie} & Mettre en \oe uvre un protocol de neutralisation & \textcolor{red}{0\%} & 1ère ST2S \\
+  \textbf{Gestion des risques au laboratoire de chimie} & Mettre en \oe uvre un protocol de neutralisation & \textcolor{green}{Neutralisation acide} & 1ère ST2S \\
   \hline
    \textbf{Biomolécules et énergie} & Réaliser l'hydrolyse d'un glucide complexe & \textcolor{red}{0\%} & 1ère ST2S \\
   \hline 
@@ -117,7 +117,7 @@ Code couleur pour les manips :\\
   \hline
   \textbf{Structure et prop des solides} & Utiliser avogadro ou vesta et déterminer des paramètres géométriques & \textcolor{red}{0\%} & MPSI \\
   \hline
-  \textbf{Cinétique homogène} & Déterminer $E_a$ & \textcolor{red}{0\%} & MPSI \\
+  \textbf{Cinétique homogène} & Déterminer $E_a$ & \textcolor{red}{hydrolyse du chlorure de tertiobutyle suivie par pH-métrie} - F. Porteu de Buchère p40& MPSI \\
   \hline
   \textbf{Diagrammes E-pH} p\pageref{LC_DiagrammeEpH} & Mettre en \oe uvre une médiamutation & \textcolor{red}{0\%} & MPSI \\
   \hline
@@ -135,17 +135,17 @@ Code couleur pour les manips :\\
 \textcolor{red}{Manip à faire en priorité}\\
 \end{center}
 
-\begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
+\begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \rowcolor{gray!20}\multicolumn{4}{c}{Avancement préparation oraux Leçons Chimie} \\
   \hline 
   Titre de la leçon & Elément imposé & Expérience & Niveau \\
   \hline
-  \textbf{Utilisation 1er principe pour la détermination de grandeurs physico-chimiques} & Déterminer $\Delta_rH_{reaction}$ & \textcolor{red}{0\%} & PSI \\
+  \textbf{Utilisation 1er principe pour la détermination de grandeurs physico-chimiques} & Déterminer $\Delta_rH_{reaction}$ & \textcolor{red}{pas fait} - F. Porteu p75 & PSI \\
   \hline
   \textbf{Optimisation d'un procédé chimique} & Mettre en évidence influence T ou P ou catalyseur sur une réaction & \textcolor{red}{0\%} & PSI \\
   \hline
-  \textbf{Corrosion humide des métaux} & Protection contre la corrosion (clou+gel agar-agar) & \textcolor{red}{0\%} & PSI \\
+  \textbf{Corrosion humide des métaux} & Protection contre la corrosion (clou+gel agar-agar) & \textcolor{red}{Passivation du fer}-Cachau Redox & PSI \\
   \hline
   \textbf{Générateurs électrochimiques} & Montrer influence de facteurs sur $e_{vide}$ d'une pile & \textcolor{red}{0\%} & PSI \\
   \hline
