--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -32,7 +32,7 @@
   \hline
   \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & Quali : moteur asservi. Quanti : Pont de Wien & \textcolor{red}{\textbf{0\%}} & \\
   \hline
-  \textbf{Traitement d'un signal. Étude spectrale} p\pageref{LP_TraitementSignal} & Boucle vérouillage de phase (mesurer $\Delta \nu_c$) - Détection synchrone & \textcolor{red}{\textbf{0\%}} & \\
+  \textbf{Traitement d'un signal. Étude spectrale} p\pageref{LP_TraitementSignal} & Filtre RC et démodulation par détection synchrone & \textcolor{yellow}{\textbf{60\%}} & Finir partie 3\\
   \hline
   
 \end{tabularx}
