Updates from Overleaf

--- a/LC_Avancement.tex
+++ b/LC_Avancement.tex
@@ -99,9 +99,9 @@ Code couleur pour les manips :\\
    \hline
   \textbf{Molécules d'intérêt biologique} & Différencier aldéhyde/cétone & \textcolor{green}{Voir Nathan ST2S} & 1ère ST2S \\
   \hline
-  \textbf{Gestion des risques au laboratoire de chimie} & Mettre en \oe uvre un protocol de neutralisation & \textcolor{green}{Neutralisation acide} & 1ère ST2S \\
+  \textbf{Gestion des risques au laboratoire de chimie} p\pageref{LC_GestionRisquesLabo} & Mettre en \oe uvre un protocol de neutralisation & \textcolor{green}{Neutralisation acide} & 1ère ST2S \\
   \hline
-   \textbf{Biomolécules et énergie} & Réaliser l'hydrolyse d'un glucide complexe & \textcolor{red}{0\%} & 1ère ST2S \\
+   \textbf{Biomolécules et énergie} p\pageref{LC_BiomoleculesEnergie} & Réaliser l'hydrolyse d'un glucide complexe & \textcolor{green}{Voir Nathan ST2S}  & 1ère ST2S \\
   \hline 
   \textbf{L'eau, propriétés physiques et chimiques} & Réaction une extraction liquide/liquide & \textcolor{red}{0\%} & 1ère ST2S \\
   \hline 
