--- a/LP_Microscospie.tex
+++ b/LP_Microscospie.tex
@@ -19,6 +19,8 @@
   \hline
   Slide de cours & Agnès Maître & Site Montrouge & \\
   \hline 
+  \url{http://ressources.agreg.phys.ens.fr/media/ressources/RessourceFichiers/11-Maxime_Dahan_-_Microscopie_pour_la_biologie.pdf} & M. Dahan & & \\
+  \hline
   \url{https://www.microscopyu.com/} & Nikon & &    \\
   \hline 
   Optique & Eugène Hecht & Pearson &   \\
@@ -53,6 +55,7 @@
   \subsection{Propriétés}
   Faire le calcul de grossissement commercial $G_{com}=\frac{\alpha'}{\alpha}$\\
   Parler d'ouverture numérique, profondeur de champ, système d'éclairement, aberrations (chromatiques, géométriques)
+  
   \subsection{Mesure du grossissement}
  
   \textcolor{blue}{Expérience quantitative :} Faire l'image d'une grille par un microscope optique, remonter au grossissement et comparer par rapport à la valeur de référence.
