--- a/LP_TransitionPhase.tex
+++ b/LP_TransitionPhase.tex
@@ -41,12 +41,22 @@
   \textbf{Déroulé détaillé de la leçon: }  
   
   \section*{Introduction}
+Faire une accroche phénoménologique. Comment décrire l'eau qui bout ? Pourquoi la température reste constante ? Pourquoi c'est la même chose pour l'eau qui gèle ? Est-ce que c'est la même chose pour toutes les transitions de phase ?
 
   \section{Transition de phase du 1er ordre}
+
+  
+  \subsection{Description du phénomène}
+
+  
+  \section{Etude du diagramme (P,V) de l'eau/azote}
+  
+  
   \subsection{Enthalpie de changement d'état} 
 
 
-  \section{Transition de phase du 2nd ordre}
+  \section{La transition ferro-para}
+  Coexistence entre deux phases. 
 \subsection{Transition paramagnétisme-ferromagnétisme}
 
 
